--- a/project1.html
+++ b/project1.html
@@ -20,8 +20,8 @@
 		<a href='projects.html'> All Projects </a>
 		<a href='project1.html'> Our Summer Memories </a>
 		<a href='project2.html'> A Serving of Soup </a>
-		<a href='project3.html'> The Seven Mysteries </a>
-		<a href='project4.html'> A Fish In The Sea </a>
+		<a href='project3.html'> Into the Woods </a>
+		<a href='project4.html'> The Seven Mysteries </a>
 		<a href='project5.html'> Alien </a>
 		<a href='project6.html'> Running To The End </a>
 		<a href='project7.html'> My Feelings Towards You </a>
