--- a/project10.html
+++ b/project10.html
@@ -16,15 +16,17 @@
 			<i class='fa fa-caret-down'> </i>
 		</button>
 		<div class='dropdown-content'>
-		<a href='projects.html'> all projects </a>
-		<a href='project1.html'> alien </a>
-		<a href='project2.html'> cats house </a>
-		<a href='project3.html'> run to the end </a>
-		<a href='project4.html'> summer memories </a>
-		<a href='project5.html'> into the village </a>
-		<a href='project6.html'> snack time </a>
-		<a href='project7.html'> bunny galore </a>
-		<a href='project8.html'> flower your own </a>
+		a href='projects.html'> All Projects </a>
+		<a href='project1.html'> Our Summer Memories </a>
+		<a href='project2.html'> A Serving of Soup </a>
+		<a href='project3.html'> Into the Woods </a>
+		<a href='project4.html'> The Seven Mysteries </a>
+		<a href='project5.html'> Alien </a>
+		<a href='project6.html'> Running To The End </a>
+		<a href='project7.html'> My Feelings Towards You </a>
+		<a href='project8.html'> How Racism Affects Cathy Park Hong’s Perception of her Identity as an Asian American </a>
+		<a href='project8.html'> Visiting the Cat's House </a>
+		<a href='project8.html'> Portfolio  </a>
 		</div>
 		</div>
 		
