--- a/project10.html
+++ b/project10.html
@@ -16,7 +16,7 @@
 			<i class='fa fa-caret-down'> </i>
 		</button>
 		<div class='dropdown-content'>
-		a href='projects.html'> All Projects </a>
+		<a href='projects.html'> All Projects </a>
 		<a href='project1.html'> Our Summer Memories </a>
 		<a href='project2.html'> A Serving of Soup </a>
 		<a href='project3.html'> Into the Woods </a>
