--- a/aboutme.html
+++ b/aboutme.html
@@ -21,14 +21,14 @@
 		<a href='projects.html'> All Projects </a>
 		<a href='project1.html'> Our Summer Memories </a>
 		<a href='project2.html'> A Serving of Soup </a>
-		<a href='project3.html'> The Seven Mysteries </a>
-		<a href='project4.html'> A Fish In The Sea </a>
+		<a href='project3.html'> Into the Woods </a>
+		<a href='project4.html'> The Seven Mysteries </a>
 		<a href='project5.html'> Alien </a>
 		<a href='project6.html'> Running To The End </a>
 		<a href='project7.html'> My Feelings Towards You </a>
 		<a href='project8.html'> How Racism Affects Cathy Park Hong’s Perception of her Identity as an Asian American </a>
-		<a href='project8.html'> Visiting the Cat's House </a>
-		<a href='project8.html'> Portfolio  </a>
+		<a href='project9.html'> Visiting the Cat's House </a>
+		<a href='project10.html'> Portfolio  </a>
 		</div>
 		</div>
 		
