--- a/project1.html
+++ b/project1.html
@@ -99,7 +99,7 @@
 	
 	<div class="container">
 		<div class="image">
-			<video controls>
+			<video width="640" height="480" controls>
 				<source src="images/summerMemV.mp4" type="video/mp4">
 				Your browser does not support the video tag.
 			</video>
