--- a/project1.html
+++ b/project1.html
@@ -86,7 +86,7 @@
 	
 	<div class="container">
 		<div class="image">
-			<img src='images/summerMemV.mp4'>
+			<img src='images/summergif.gif'>
 		</div>
 	</div>
 	
