--- a/project10.html
+++ b/project10.html
@@ -31,9 +31,7 @@
 		</div>
 		
 		<a href='aboutme.html'> about me </a> 
-		<div class="topnav-right">
-		<a href=''> search </a>
-		</div>
+		
 		</div>
 		
 	
@@ -90,6 +88,9 @@
 		This is the final prototype. The navigation bar is now more suitable, and any unnecessary titles<br>
 		were removed. The design seems more full and fluid, which is preferred. It is also the stage where <br>
 		I added a drop down menu.
+	</p>
+	<p>
+		<a href="https://github.com/lilinlim/ellelilinlimportfolio"> Github Link to my Code </a> <br>
 	</p>
 	
 	<br>
